Mon Nov 15 12:59:06 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventSupplierMain.cpp:
        * orbsvcs/examples/FaultTolerance/RolyPoly/ReplicaController.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/FTEC_Group_Manager.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Fault_Detector_Loader.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Replication_Service.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.cpp:
        * orbsvcs/orbsvcs/Sched/Reconfig_Scheduler_T.cpp:
        * orbsvcs/performance-tests/RTEvent/lib/Control.cpp:
        * orbsvcs/performance-tests/RTEvent/lib/Low_Priority_Setup.cpp:
        * orbsvcs/performance-tests/RTEvent/lib/RTClient_Setup.cpp:
        * orbsvcs/performance-tests/RTEvent/lib/RTServer_Setup.cpp:
        * orbsvcs/tests/Event/Mcast/RTEC_MCast_Federated/EchoEventSupplierMain.cpp:
        * orbsvcs/tests/FtRtEvent/consumer.cpp:
        * orbsvcs/tests/FtRtEvent/supplier.cpp:
        * tao/IORManipulation/IORManipulation.cpp:
        * tao/Load_Protocol_Factory_T.h:
        * tao/default_resource.cpp:
          Use ACE_auto_ptr_reset

Sun Nov 14 22:43:56 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_typecode/objref_typecode.cpp:

          Changed check for CCM home type from dynamic_cast<>,
          which doesn't work since we process the equivalent
          interface node(s) for the typecode, to a call to
          home_equiv() on the interface node.

        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
        * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:

          Added calls to set the 'home_equiv_' flag on both
          the explicit and implicit home interfaces. It was
          already set for the equivalent interface. This fix
          closes [BUGID:3925].

Sat Nov 13 14:01:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector.cpp: